--- a/index.html
+++ b/index.html
@@ -54,28 +54,28 @@
     <article id="work" class="wrapper style2">
       <div class="container">
         <header>
-          <h2>Here's all the stuff I do.</h2>
+          <h2>Some of my skills:</h2>
         </header>
         <div class="row aln-center">
           <div class="col-4 col-6-medium col-12-small">
             <section class="box style1">
               <span class="icon featured fa-comments-o"></span>
-              <h3>Code</h3>
-              <p>HTML, CSS, JavaScript...</p>
+              <h3>Languages</h3>
+              <p>HTML, CSS/SaaS, JavaScript, Python</p>
             </section>
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <section class="box style1">
               <span class="icon featured fa-camera-retro"></span>
-              <h3>Code some more</h3>
-              <p>Node, Express, PostgreSQL, MongoDB</p>
+              <h3>Libraries & Frameworks</h3>
+              <p>NodeJS, ExpressJS, Gatsby, React</p>
             </section>
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <section class="box style1">
               <span class="icon featured fa-thumbs-o-up"></span>
-              <h3>Run and Bike</h3>
-              <p>Anywhere with a view.</p>
+              <h3>Tools & Platforms</h3>
+              <p>PostgreSQL, Heroku, Git, AWS, MongoDB, Netlify</p>
             </section>
           </div>
         </div>
