--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
               <a href="https://resume.creddle.io/resume/3pzw5c2vegl"
                 >Lambda School</a
               >
-              . I like code, movies and good tea.
+              . I like code, movies and
+              <a
+                href="https://www.youtube.com/playlist?list=PL4k6Vo6nX-anujmIhLjImIx5VtuSZhJq7"
+                >helping</a
+              >
+              others succeed.
             </p>
             <a href="#work" class="button large scrolly"
               >Learn about what I do</a
@@ -347,13 +352,19 @@
                   ><span class="label">Github</span></a
                 >
               </li>
+              <li>
+                <a
+                  href="https://www.youtube.com/playlist?list=PL4k6Vo6nX-anujmIhLjImIx5VtuSZhJq7"
+                  class="icon fa-youtube"
+                >
+                </a>
+              </li>
               <!--
 								<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
 								<li><a href="#" class="icon fa-foursquare"><span>Foursquare</span></a></li>
 								<li><a href="#" class="icon fa-skype"><span>Skype</span></a></li>
 								<li><a href="#" class="icon fa-soundcloud"><span>Soundcloud</span></a></li>
-								<li><a href="#" class="icon fa-youtube"><span>YouTube</span></a></li>
 								<li><a href="#" class="icon fa-blogger"><span>Blogger</span></a></li>
 								<li><a href="#" class="icon fa-flickr"><span>Flickr</span></a></li>
 								<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
