--- a/index.html
+++ b/index.html
@@ -36,16 +36,15 @@
               <h1>Hi. I'm <strong>Harjoth</strong>.</h1>
             </header>
             <p>
-              I'm a <strong>full stack web developer</strong>, currently at
+              I'm a
               <a href="https://resume.creddle.io/resume/3pzw5c2vegl"
-                >Lambda School</a
+                ><strong>full stack web developer</strong>.</a
               >
-              . I like code, movies and
+              I like code, movies and breaking down coding
               <a
                 href="https://www.youtube.com/playlist?list=PL4k6Vo6nX-anujmIhLjImIx5VtuSZhJq7"
-                >helping</a
+                >problems.</a
               >
-              others succeed.
             </p>
             <a href="#work" class="button large scrolly"
               >Learn about what I do</a
@@ -73,7 +72,7 @@
             <section class="box style1">
               <span class="icon featured fa-camera-retro"></span>
               <h3>Libraries & Frameworks</h3>
-              <p>NodeJS, ExpressJS, Gatsby, React</p>
+              <p>React, NodeJS, ExpressJS,</p>
             </section>
           </div>
           <div class="col-4 col-6-medium col-12-small">
