made links open in a new tab. removed unecessary content.

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             </header>
             <p>
               I'm a
-              <a href="https://resume.creddle.io/resume/3pzw5c2vegl"
-                ><strong>full stack web developer</strong>.</a
+              <a href="https://resume.creddle.io/resume/3pzw5c2vegl" target="_blank"
+                ><strong>Full Stack Web Developer</strong>.</a
               >
               I like code, movies and breaking down coding
               <a
-                href="https://www.youtube.com/playlist?list=PL4k6Vo6nX-anujmIhLjImIx5VtuSZhJq7"
+                href="https://www.youtube.com/playlist?list=PL4k6Vo6nX-anujmIhLjImIx5VtuSZhJq7" target="_blank"
                 >problems.</a
               >
             </p>
@@ -98,31 +98,15 @@
           <h2>Here’s some recent projects:</h2>
         </header>
         <div class="row">
-          <!-- <div class="col-4 col-6-medium col-12-small">
-            <article class="box style2">
-              <a href="#" class="image featured"
-                ><img src="images/cupcakes.jpg" alt=""
-              /></a>
-              <h3>
-                <a href="https://codepen.io/harjothk/pen/mojwPv?editors=1100"
-                  >Sweet Eats Bakery</a
-                >
-              </h3>
-              <p>
-                User Interface project utilizing HTML and CSS. Created
-                additional button animations.
-              </p>
-            </article>
-          </div> -->
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
               <a
-                href="https://lucid-bohr-7b9802.netlify.com/"
+                href="https://lucid-bohr-7b9802.netlify.com/" target="_blank"
                 class="image featured"
                 ><img src="images/mario.png" alt=""
               /></a>
               <h3>
-                <a href="https://lucid-bohr-7b9802.netlify.com/">MarioClub</a>
+                <a href="https://lucid-bohr-7b9802.netlify.com/" target="_blank">MarioClub</a>
               </h3>
               <p>
                 Single page application using HTML and CSS. Learned about HTML
@@ -130,7 +114,7 @@
                 position, CSS Pseudo Classes & Elements and Media Queries.
               </p>
               <a
-                href="https://github.com/harjothkhara/Marioclub"
+                href="https://github.com/harjothkhara/Marioclub" target="_blank"
                 class="icon fa-github"
                 ><span class="label">Github</span></a
               >
@@ -139,12 +123,12 @@
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
               <a
-                href="https://elated-ritchie-3fa910.netlify.com"
+                href="https://elated-ritchie-3fa910.netlify.com" target="_blank"
                 class="image featured"
                 ><img src="images/photo-ninja.png" alt=""
               /></a>
               <h3>
-                <a href="https://elated-ritchie-3fa910.netlify.com"
+                <a href="https://elated-ritchie-3fa910.netlify.com" target="_blank"
                   >Photo Ninja</a
                 >
               </h3>
@@ -154,7 +138,7 @@
                 fontawesome, html forms and parallaxes.
               </p>
               <a
-                href="https://github.com/harjothkhara/Materialize-Project"
+                href="https://github.com/harjothkhara/Materialize-Project" target="_blank"
                 class="icon fa-github"
                 ><span class="label">Github</span></a
               >
@@ -163,12 +147,12 @@
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
               <a
-                href="https://wunderlist20.github.io/landing-avni/index.html"
+                href="https://wunderlist20.github.io/landing-avni/index.html" target="_blank"
                 class="image featured"
                 ><img src="images/wunderlist.png" alt=""
               /></a>
               <h3>
-                <a href="https://wunderlist20.github.io/landing-avni/index.html"
+                <a href="https://wunderlist20.github.io/landing-avni/index.html" target="_blank"
                   >Wunderlist 2.0</a
                 >
               </h3>
@@ -179,7 +163,7 @@
                 Heroku.
               </p>
               <a
-                href="https://github.com/wunderlist20/backend"
+                href="https://github.com/wunderlist20/backend" target="_blank"
                 class="icon fa-github"
                 ><span class="label">Github</span></a
               >
@@ -188,12 +172,12 @@
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
               <a
-                href="https://focused-joliot-901933.netlify.com/#"
+                href="https://focused-joliot-901933.netlify.com/#" target="_blank"
                 class="image featured"
                 ><img src="images/glucose.png" alt=""
               /></a>
               <h3>
-                <a href="https://focused-joliot-901933.netlify.com/"
+                <a href="https://focused-joliot-901933.netlify.com/" target="_blank"
                   >GlucosIQ</a
                 >
               </h3>
@@ -203,7 +187,7 @@
                 to link the React application via a sign in button.
               </p>
               <a
-                href="https://github.com/restaurant123/FE/tree/harjoth-khara"
+                href="https://github.com/restaurant123/FE/tree/harjoth-khara" target="_blank"
                 class="icon fa-github"
                 ><span class="label">Github</span></a
               >
@@ -212,14 +196,13 @@
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
               <a
-                href="https://practical-darwin-05d846.netlify.com"
+                href="https://practical-darwin-05d846.netlify.com" target="_blank"
                 class="image featured"
                 ><img src="images/restaurant-passport.png" alt=""
               /></a>
               <h3>
-                <a href="https://practical-darwin-05d846.netlify.com"
-                  >Restaurant Passport</a
-                >
+                <a href="https://practical-darwin-05d846.netlify.com" target="_blank"
+                  >Restaurant Passport</a>
               </h3>
               <p>
                 Created this project as part of Build Week where I served as the
@@ -227,7 +210,7 @@
                 scratch using React, Redux, Material UI, and Axios.
               </p>
               <a
-                href="https://github.com/restaurant123/FE/tree/harjoth-khara"
+                href="https://github.com/restaurant123/FE/tree/harjoth-khara" target="_blank"
                 class="icon fa-github"
                 ><span class="label">Github</span></a
               >
@@ -236,7 +219,7 @@
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2">
               <a
-                href="https://liveinthebestplace.netlify.app/"
+                href="https://liveinthebestplace.netlify.app/" target="_blank"
                 class="image featured"
                 ><img src="images/liveinthebestplace.png" alt=""
               /></a>
@@ -258,7 +241,7 @@
                 testing, and extensive competition, technical and user research.
               </p>
               <a
-                href="https://github.com/Lambda-School-Labs/best-places-to-live-fe"
+                href="https://github.com/Lambda-School-Labs/best-places-to-live-fe" target="_blank"
                 class="icon fa-github"
                 ><span class="label">Github</span></a
               >
@@ -266,8 +249,9 @@
           </div>
         </div>
         <footer>
-          <p>You can find more of my projects on my Github Page</p>
-          <a href="#contact" class="button large scrolly"
+          <p>You can find more of my work on <a href="https://github.com/harjothkhara" target="_blank"
+            >Github</a></p>
+          <a href="mailto:harjoth.khara@gmail.com" class="button large scrolly"
             >Get in touch with me</a
           >
         </footer>
@@ -277,51 +261,6 @@
     <!-- Contact -->
     <article id="contact" class="wrapper style4">
       <div class="container medium">
-        <header>
-          <h2>Have me make stuff for you.</h2>
-          <p>Lets chat!</p>
-        </header>
-        <div class="row">
-          <div class="col-12">
-            <form method="post" action="#">
-              <div class="row">
-                <div class="col-6 col-12-small">
-                  <input type="text" name="name" id="name" placeholder="Name" />
-                </div>
-                <div class="col-6 col-12-small">
-                  <input
-                    type="text"
-                    name="email"
-                    id="email"
-                    placeholder="Email"
-                  />
-                </div>
-                <div class="col-12">
-                  <input
-                    type="text"
-                    name="subject"
-                    id="subject"
-                    placeholder="Subject"
-                  />
-                </div>
-                <div class="col-12">
-                  <textarea
-                    name="message"
-                    id="message"
-                    placeholder="Message"
-                  ></textarea>
-                </div>
-                <div class="col-12">
-                  <ul class="actions">
-                    <li><input type="submit" value="Send Message" /></li>
-                    <li>
-                      <input type="reset" value="Clear Form" class="alt" />
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </form>
-          </div>
           <div class="col-12">
             <hr />
             <h3>Find me on ...</h3>
@@ -341,11 +280,6 @@
                 >
               </li>
 
-              <!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li> -->
               <li>
                 <a href="https://github.com/harjothkhara" class="icon fa-github"
                   ><span class="label">Github</span></a
@@ -358,16 +292,6 @@
                 >
                 </a>
               </li>
-              <!--
-								<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
-								<li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
-								<li><a href="#" class="icon fa-foursquare"><span>Foursquare</span></a></li>
-								<li><a href="#" class="icon fa-skype"><span>Skype</span></a></li>
-								<li><a href="#" class="icon fa-soundcloud"><span>Soundcloud</span></a></li>
-								<li><a href="#" class="icon fa-blogger"><span>Blogger</span></a></li>
-								<li><a href="#" class="icon fa-flickr"><span>Flickr</span></a></li>
-								<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
-								-->
             </ul>
             <hr />
           </div>
