--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a href="https://resume.creddle.io/resume/3pzw5c2vegl" target="_blank"
                 ><strong>Full Stack Web Developer</strong>.</a
               >
-              I like code, movies and breaking down coding
+              I like code, movies and breaking down
               <a
                 href="https://www.youtube.com/playlist?list=PL4k6Vo6nX-anujmIhLjImIx5VtuSZhJq7" target="_blank"
                 >problems.</a
